# text_editor

./: .gitignore  CMakeLists.txt  README.md  main.c
